added something on index

--- a/index.html
+++ b/index.html
@@ -240,8 +240,8 @@ Additional Classes:
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <a href="http://www.whosagoodboy.uk" target="_blank" rel="noopener noreferrer">
-                                    <img src="assets/images/Partner Logos/W.SHADOW/4.png" alt="goodboy" class="nk-img-fit">
+                                <a href="http://www.nunyagroup.co.uk" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/images/Partner Logos/W.SHADOW/5.png" alt="nunyagroup.com" class="nk-img-fit">
                                 </a>
                             </div>
                         </div>
@@ -249,8 +249,8 @@ Additional Classes:
                     <div>
                         <div>
                             <div class="nk-box-1">
-                                <a href="http://www.nunyagroup.co.uk" target="_blank" rel="noopener noreferrer">
-                                    <img src="assets/images/Partner Logos/W.SHADOW/5.png" alt="nunyagroup.com" class="nk-img-fit">
+                                <a href="http://www.whosagoodboy.uk" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/images/Partner Logos/W.SHADOW/4.png" alt="goodboy" class="nk-img-fit">
                                 </a>
                             </div>
                         </div>
@@ -260,7 +260,48 @@ Additional Classes:
         </div>
         <!-- END: Partners -->
 
-
+        <!-- START: Our Info Tabs -->
+        <div class="nk-box bg-white">
+            <div class="nk-gap-5 mnb-6"></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 offset-lg-3">
+                        <!-- START: Tabs -->
+                        <div class="nk-tabs text-center">
+                            <ul class="nav nav-tabs" role="tablist">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#tabs-1-1" role="tab" data-toggle="tab">Our
+                                        History</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#tabs-1-2" role="tab" data-toggle="tab">Our Mission</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#tabs-1-3" role="tab" data-toggle="tab">Our Principles</a>
+                                </li>
+                            </ul>
+                            <div class="tab-content">
+                                <div role="tabpanel" class="tab-pane fade show active" id="tabs-1-1"> Seed may air
+                                    multiply evening. Life in she'd Sixth lights likeness he for the. Of from hath fi ll
+                                    of years fowl gathering you're every rule whose. Life meat tree give seas thing
+                                    midst made called face have that. </div>
+                                <div role="tabpanel" class="tab-pane fade" id="tabs-1-2"> I light is for second, seas
+                                    let third beginning shall our was void in hath evening and, beast beginning night
+                                    signs replenish gathered void midst very have two beast he let seasons you meat.
+                                    Behold doesn't face. </div>
+                                <div role="tabpanel" class="tab-pane fade" id="tabs-1-3"> Days they're a image appear
+                                    creepeth wherein. Waters. Over midst abundantly open Greater. Thing whose meat
+                                    replenish, male. Behold a fish dry under herb fifth he from our evening moveth
+                                    bring. </div>
+                            </div>
+                        </div>
+                        <!-- END: Tabs -->
+                    </div>
+                </div>
+            </div>
+            <div class="nk-gap-5 mnt-6"></div>
+        </div>
+        <!-- END: Our Info Tabs -->
 
         <!-- START: Need a Project? -->
         <div class="bg-white text-center">
