changed video colour

--- a/video.html
+++ b/video.html
@@ -219,7 +219,7 @@ Additional Classes:
         </div>
         <!-- END: Header Title -->
             <!-- START: Features -->
-            <div class="nk-box bg-main text-white">
+            <div class="nk-box bg-main-1 text-black-3">
                 <div class="container">
                     <div class="nk-gap-5 mnt-6"></div>
                     <div class="row vertical-gap">
